# connect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  lefthook.yml  package.json  pnpm-lock.yaml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release-please.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/.serena/: project.yml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: mod.rs  osu.rs  proxy.rs  shortcut.rs
src-tauri/src/domain/: config.rs  mod.rs  packet.rs  routing.rs
src-tauri/src/infrastructure/: hosts.rs  http_proxy.rs  logging.rs  mod.rs  storage.rs  tcp_proxy.rs  tls.rs
src-tauri/src/interface/: commands.rs
src/lib/components/: Button.svelte  Checkbox.svelte  LogViewer.svelte  Onboarding.svelte  Settings.svelte  StatsCard.svelte  StatusIndicator.svelte  Tooltip.svelte  UpdateNotification.svelte
src/lib/stores/: app.svelte.ts  updater.svelte.ts
src/lib/types/: index.ts
src/routes/: +page.svelte
